Integrate jwt validation. Update user role feature is done
